new front & back works. w/o concurrently

--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^5.2.3",
     "concurrently": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.16.4",
+    "file-saver": "^2.0.5",
     "mongoose": "^5.4.6",
     "nodemon": "^1.18.9",
     "parcel": "^1.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "server": "nodemon",
