--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,7 @@ sketch
 # .pnp.*
 
 ## some my stuff ##
-todo
+todo.md
+.vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/react,node,yarn
