--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^5.2.3",
     "concurrently": "^4.1.0",
+    "docx": "^7.8.2",
     "dotenv": "^16.0.3",
     "express": "^4.16.4",
     "file-saver": "^2.0.5",
@@ -18,7 +19,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "5.2.0",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
