--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.16.4",
     "file-saver": "^2.0.5",
+    "loda": "^0.1.3",
     "mongoose": "^5.4.6",
     "nodemon": "^1.18.9",
     "parcel": "^1.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-preloaders": "^3.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "5.2.0",
     "web-vitals": "^3.1.1"
@@ -25,11 +27,12 @@
   "scripts": {
     "server": "nodemon",
     "client": "parcel client/index.html",
-    "dev": "concurrently --kill-others \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others \"npm run server\" \"npm run client\"",
+    "build": "parcel build client/index.html --out-dir build",
+    "prodclient": "parcel build/index.html",
+    "prodlook": "concurrently --kill-others \"npm run server\" \"npm run prodclient\""
   },
-  "devDependencies": {
-    "tailwindcss": "^0.7.4"
-  },
+  "devDependencies": {},
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   }
