before first deploy

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,7 @@ sketch
 
 ## some my stuff ##
 todo.md
+somenotes.js
 .vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/react,node,yarn
