--- a/package.json
+++ b/package.json
@@ -5,23 +5,34 @@
   "license": "MIT",
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@react-pdf/renderer": "^3.1.9",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^5.2.3",
     "concurrently": "^4.1.0",
+    "dayjs": "^1.11.7",
     "docx": "^7.8.2",
     "dotenv": "^16.0.3",
     "express": "^4.16.4",
     "file-saver": "^2.0.5",
+    "h": "^1.0.0",
     "loda": "^0.1.3",
     "mongoose": "^5.4.6",
     "nodemon": "^1.18.9",
     "parcel": "^1.11.0",
+    "petrovich": "^0.2.1",
+    "re": "^0.1.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-preloaders": "^3.0.3",
+    "react-redux": "^8.0.5",
     "react-router": "^4.3.1",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^6.10.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "rubles": "^0.2.0",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
