--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.8",
     "react-dom": "^16.8",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-input-date-mask": "^2.0.0",
     "react-preloaders": "^3.0.3",
     "react-redux": "^8.0.5",
     "react-router": "^4.3.1",
