--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.2.0",
+    "react-input-mask": "^2.0.4",
     "react-preloaders": "^3.0.3",
     "react-redux": "^8.0.5",
     "react-router": "^4.3.1",
