--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.11.8",
     "@react-pdf/renderer": "^3.1.9",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-table": "^8.16.0",
     "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
@@ -47,7 +48,8 @@
     "redux-thunk": "^2.4.2",
     "rubles": "^0.2.0",
     "sessionstorage-for-nodejs": "^1.0.2",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "server": "nodemon",
