second prod test

--- a/.gitignore
+++ b/.gitignore
@@ -178,5 +178,6 @@ somenotes.js
 .idea
 backups
 banks.list.js
+yarn.lock
 
 # End of https://www.toptal.com/developers/gitignore/api/react,node,yarn
